# TEDBench

./: .gitignore  CHANGELOG.md  CITATION.cff  LICENSE  README.md  TRAINING.md  main_finetune_ted.py  main_linprobe_ted.py  main_pretrain.py  main_test_ted.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  publish.yml
baselines/: esm2_finetune_ted.py  esm2_linprobe_ted.py  esm2_test_ted.py  proteinmpnn_linprobe_ted.py  saprot_finetune_ted.py  saprot_linprobe_ted.py  saprot_test_ted.py
baselines/configs/: esm2_finetune_ted.yaml  esm2_linprobe_ted.yaml  proteinmpnn_linprobe_ted.yaml  saprot_finetune_ted.yaml  saprot_linprobe_ted.yaml
baselines/models/: esm2_classifier.py  proteinmpnn_utils.py  saprot_classifier.py  structure_models.py
baselines/saprot/model/: abstract_model.py
baselines/saprot/utils/: esm_loader.py  foldseek_util.py
baselines_equivariant/: README.md  data.py  eval_all.py  formatting.py  requirements.txt  test_model.py  train.py
baselines_equivariant/models/: __init__.py  e3nn.py  gotennet.py  mace.py
configs/: finetune_ted.yaml  linprobe_ted.yaml  pretrain.yaml  test_ted.yaml
configs/datamodule/: afdbfs.yaml  afdbfs_stream.yaml  afdbfs_ted.yaml  cath_test.yaml  hf_afdbfs.yaml  hf_cath_test.yaml  hf_ted.yaml
configs/experiment/: finetune_ted_base.yaml  finetune_ted_base_n1g8.yaml  scratch_ted_base.yaml  scratch_ted_base_n1g8.yaml  tedbench_base.yaml  tedbench_base_n4g8.yaml
configs/mode/: debug.yaml
minesm/layers/: attention.py  blocks.py  geom_attention.py  geometric_attn.py  structure_proj.py  transformer_stack.py
minesm/models/: vqvae.py
minesm/tokenization/: sequence_tokenizer.py
minesm/utils/: misc.py
minesm/utils/structure/: affine3d.py  aligner.py  metrics.py  normalize_coordinates.py  protein_chain.py  protein_structure.py
tedbench/: __init__.py  lr_schedulers.py
tedbench/data/: abstract.py  afdb.py  afdb_ted.py  cath_test.py  datasets.py  hf_datasets.py  transform.py
tedbench/layer/: head.py  pos_embed.py
tedbench/model/: __init__.py  encoder.py  fot.py  loss.py  mae.py  metrics.py  pl_engine.py
tedbench/utils/: io.py  lars.py  linear_clf.py  tensor_utils.py
