[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "TEDBench"
authors = [
    {name = "Dexiong Chen", email = "dchen@biochem.mpg.de"},
    {name = "Andrei Manolache", email = "andrei.manolache@ki.uni-stuttgart.de"}
]
description = "TEDBench: Large-Scale Protein Fold Classification Benchmark and MiAE Pretraining"
readme = "README.md"
requires-python = ">=3.9"
keywords = ["protein fold classification", "masked autoencoder", "protein structure", "geometric deep learning", "benchmark"]
license = {text = "BSD-3-Clause"}
classifiers = [
    "Programming Language :: Python :: 3",
]
dynamic = ["version"]
dependencies = [
    "torch",
    "numpy",
    "scipy",
    "scikit-learn",
    "torchmetrics",
    "lightning",
    "hydra-core",
    "fair-esm",
    "biotite",
    "biopython",
    "transformers",
    "huggingface_hub",
    "datasets",
    "cloudpathlib",
    "msgpack_numpy",
    "zstd",
    "brotli",
    "einops",
    "joblib",
    "rich",
    "tqdm",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["tedbench*", "minesm*"]
exclude = ["baselines*", "configs*", "datasets*", "tmp*"]

[tool.setuptools_scm]
write_to = "tedbench/_version.py"
